src/plugins/invert/shaders/invert.frag
@@ -1,22 +1,24 @@
+#include "colormanagement.glsl"
+#include "saturation.glsl"
+
 uniform sampler2D sampler;
 uniform vec4 modulation;
-uniform float saturation;
 
 varying vec2 texcoord0;
 
 void main()
 {
     vec4 tex = texture2D(sampler, texcoord0);
+    tex = sourceEncodingToNitsInDestinationColorspace(tex);
+    tex = adjustSaturation(tex);
 
-    if (saturation != 1.0) {
-        vec3 desaturated = tex.rgb * vec3( 0.30, 0.59, 0.11 );
-        desaturated = vec3( dot( desaturated, tex.rgb ));
-        tex.rgb = tex.rgb * vec3( saturation ) + desaturated * vec3( 1.0 - saturation );
-    }
-
+    // to preserve perceptual contrast, apply the inversion in gamma 2.2 space
+    tex = nitsToEncoding(tex, gamma22_EOTF);
+    tex.rgb /= max(0.001, tex.a);
     tex.rgb = vec3(1.0) - tex.rgb;
     tex *= modulation;
     tex.rgb *= tex.a;
+    tex = encodingToNits(tex, gamma22_EOTF);
 
-    gl_FragColor = tex;
+    gl_FragColor = nitsToDestinationEncoding(tex);
 }
